u zoomcasts for new zoomcasts

--- a/html/zoomcasts.html
+++ b/html/zoomcasts.html
@@ -58,6 +58,24 @@
 					<p>These Zoomcasts serve as a mechanism for us to stage conversations around specific themes, think together about our classroom practices, and reflect on our processes of learning (and un-learning) as teachers. In conversation with guest speakers, we explore how we can grow together as a community of scholars and learn from one another – especially in moving beyond the boundaries of our field and training. Please also visit our <a href="https://www.youtube.com/channel/UCG54ttra0SBTh3PRvLXuTwA">YouTube</a> channel.</p>
 				</section>
 
+				<section aria-labelledby="positionality-5">
+					<h2 id="positionality-5">Positionality #5</h2>
+					<div><a href="/html/zoomcasts/chaozon-bauer.html"><img loading="lazy" src="/img/zoomcasts/chaozon-bauer-930px.jpg" srcset="/img/zoomcasts/chaozon-bauer-930px.jpg 930w, /img/zoomcasts/chaozon-bauer-816px.jpg 816w, /img/zoomcasts/chaozon-bauer-663px.jpg 663w, /img/zoomcasts/chaozon-bauer-532px.jpg 532w, /img/zoomcasts/chaozon-bauer-465px.jpg 465w, /img/zoomcasts/chaozon-bauer-408px.jpg 408w, /img/zoomcasts/chaozon-bauer-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Pearl Chaozon Bauer" title="Pearl Chaozon Bauer"/><span>Pearl Chaozon Bauer</span></a></div>
+					<p>Tricia Lootens interviews Pearl Chaozon Bauer to discuss the latter's recent departure from higher ed. and the need to reenvision Victorian studies classrooms.</p>
+				</section>
+
+				<section aria-labelledby="literary-3">
+					<h2 id="literary-3">Beyond the Literary #3</h2>
+					<div><a href="/html/zoomcasts/kim-cobblah.html"><img loading="lazy" src="/img/zoomcasts/kim-cobblah-930px.jpg" srcset="/img/zoomcasts/kim-cobblah-1275px.jpg 1275w, /img/zoomcasts/kim-cobblah-930px.jpg 930w, /img/zoomcasts/kim-cobblah-816px.jpg 816w, /img/zoomcasts/kim-cobblah-663px.jpg 663w, /img/zoomcasts/kim-cobblah-532px.jpg 532w, /img/zoomcasts/kim-cobblah-465px.jpg 465w, /img/zoomcasts/kim-cobblah-408px.jpg 408w, /img/zoomcasts/kim-cobblah-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders images of Haejoo Kim and Anoff Nick Cobblah" title="Haejoo Kim and Anoff Nick Cobblah"/><span>Haejoo Kim and Anoff Nick Cobblah</span></a></div>
+					<p>Ryan D. Fong talks with Haejoo Kim and Anoff Nick Cobblah about race and teaching Victorian writings on science, medicine and technology.</p>
+				</section>
+
+				<section aria-labelledby="positionality-4">
+					<h2 id="positionality-4">Positionality #4</h2>
+					<div><a href="/html/zoomcasts/servitje.html"><img loading="lazy" src="/img/zoomcasts/servitje-930px.jpg" srcset="/img/zoomcasts/servitje-1275px.jpg 1275w, /img/zoomcasts/servitje-930px.jpg 930w, /img/zoomcasts/servitje-816px.jpg 816w, /img/zoomcasts/servitje-663px.jpg 663w, /img/zoomcasts/servitje-532px.jpg 532w, /img/zoomcasts/servitje-465px.jpg 465w, /img/zoomcasts/servitje-408px.jpg 408w, /img/zoomcasts/servitje-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Lorenzo Servitje" title="Lorenzo Servitje"/><span>Lorenzo Servitje</span></a></div>
+					<p>Ryan D. Fong talks with Lorenzo Servitje about the latter's entry into Victorian studies and becoming an interdisciplinary scholar of science, medicine, and literature.</p>
+				</section>
+
 				<section aria-labelledby="collaboration-1">
 					<h2 id="collaboration-3">Collaboration #1</h2>
 					<div><a href="/html/zoomcasts/braham-ohri-simpson.html"><img loading="lazy" src="/img/zoomcasts/braham-ohri-simpson-930px.jpg" srcset="/img/zoomcasts/braham-ohri-simpson-1275px.jpg 1275w, /img/zoomcasts/braham-ohri-simpson-930px.jpg 930w, /img/zoomcasts/braham-ohri-simpson-816px.jpg 816w, /img/zoomcasts/braham-ohri-simpson-663px.jpg 663w, /img/zoomcasts/braham-ohri-simpson-532px.jpg 532w, /img/zoomcasts/braham-ohri-simpson-465px.jpg 465w, /img/zoomcasts/braham-ohri-simpson-408px.jpg 408w, /img/zoomcasts/braham-ohri-simpson-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders images of Kira Braham, Indu Ohri, Bre Simpson" title="Kira Braham, Indu Ohri, Bre Simpson"/><span>Kira Braham, Indu Ohri, Bre Simpson</span></a></div>
