--- a/html/zoomcasts/servitje.html
+++ b/html/zoomcasts/servitje.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<title>Zoomcast with Lorenzo Servitje | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content="Ryan D. Fong talks with Lorenzo Servitje about his entry into Victorian studies and becoming an interdisciplinary scholar of science, medicine, and literature."/>
+		<meta name="description" content="Ryan D. Fong talks with Lorenzo Servitje about the latter's entry into Victorian studies and becoming an interdisciplinary scholar of science, medicine, and literature."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#395375"/>
