--- a/html/zoomcasts/chaozon-bauer.html
+++ b/html/zoomcasts/chaozon-bauer.html
@@ -55,7 +55,7 @@
 					<h2 id="zoomcast">Zoomcast with Pearl Chaozon Bauer</h2>
 
 					<div class="wrapper" aria-labelledby="">
-						<div id="chaozon-bauer" class="youtube" tabindex="0" data-embed="yTDXrDCdfxc" data-title="Pearl Chaozon Bauer" data-id="" data-alt="Head and shoulders image of Pearl Chaozon Bauer"><!-- Change data-id -->
+						<div id="chaozon-bauer" class="youtube" tabindex="0" data-embed="yTDXrDCdfxc" data-title="Pearl Chaozon Bauer" data-id="chaozon-bauer" data-alt="Head and shoulders image of Pearl Chaozon Bauer"><!-- Change data-id -->
 							<nav class="skipcontrols" aria-labelledby="skip-controls">
 								<a href="#text" id="skip-controls" tabindex="-1">skip video controls</a>
 							</nav>
