--- a/html/zoomcasts/kim-cobblah.html
+++ b/html/zoomcasts/kim-cobblah.html
@@ -68,9 +68,9 @@
 						<div class="specs-container">
 							<p id="text"><strong>Speakers:</strong> Haejoo Kim and Anoff Nick Cobblah (guests), Ryan D. Fong (host)</p>
 							<p><strong>Length:</strong> 31:59</p><!-- Change -->
-							<p><strong>Zoomcast Date: September 29, 2021</strong> </p>
+							<p><strong>Zoomcast Date:</strong> September 29, 2021</p>
 							<p><strong>Zoomcast Series:</strong> Beyond the Literary</p>
-							<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/zoomcasts/2021-09-29-Cobblah-Kim-transcript.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/zoomcasts/2021-09-29-Cobblah-Kim-transcript.docx"  title="This link opens a Word document.">Word</a></p>
+							<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/zoomcasts/2021-09-29-Kim-Cobblah-transcript.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/zoomcasts/2021-09-29-Kim-Cobblah-transcript.docx"  title="This link opens a Word document.">Word</a></p>
 						</div>
 					</section>
 
