--- a/html/zoomcasts.html
+++ b/html/zoomcasts.html
@@ -58,11 +58,11 @@
 					<p>These Zoomcasts serve as a mechanism for us to stage conversations around specific themes, think together about our classroom practices, and reflect on our processes of learning (and un-learning) as teachers. In conversation with guest speakers, we explore how we can grow together as a community of scholars and learn from one another – especially in moving beyond the boundaries of our field and training. Please also visit our <a href="https://www.youtube.com/channel/UCG54ttra0SBTh3PRvLXuTwA">YouTube</a> channel.</p>
 				</section>
 
-				<section aria-labelledby="positionality-5">
+				<!-- <section aria-labelledby="positionality-5">
 					<h2 id="positionality-5">Positionality #5</h2>
 					<div><a href="/html/zoomcasts/chaozon-bauer.html"><img loading="lazy" src="/img/zoomcasts/chaozon-bauer-930px.jpg" srcset="/img/zoomcasts/chaozon-bauer-930px.jpg 930w, /img/zoomcasts/chaozon-bauer-816px.jpg 816w, /img/zoomcasts/chaozon-bauer-663px.jpg 663w, /img/zoomcasts/chaozon-bauer-532px.jpg 532w, /img/zoomcasts/chaozon-bauer-465px.jpg 465w, /img/zoomcasts/chaozon-bauer-408px.jpg 408w, /img/zoomcasts/chaozon-bauer-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Pearl Chaozon Bauer" title="Pearl Chaozon Bauer"/><span>Pearl Chaozon Bauer</span></a></div>
 					<p>Tricia Lootens interviews Pearl Chaozon Bauer to discuss the latter's recent departure from higher ed. and the need to reenvision Victorian studies classrooms.</p>
-				</section>
+				</section> -->
 
 				<section aria-labelledby="literary-3">
 					<h2 id="literary-3">Beyond the Literary #3</h2>
