--- a/html/about.html
+++ b/html/about.html
@@ -77,6 +77,11 @@
 					<h2 id="bibliography">Bibliography</h2>
 					<div><a href="/html/about/bibliography.html"><img loading="lazy" src="/img/about/tiles/uvc_0022-1136px.jpg" srcset="/img/about/tiles/uvc_0022-1136px.jpg 1136w, /img/about/tiles/uvc_0022-930px.jpg 930w, /img/about/tiles/uvc_0022-814px.jpg 814w, /img/about/tiles/uvc_0022-662px.jpg 662w, /img/about/tiles/uvc_0022-568px.jpg 568w, /img/about/tiles/uvc_0022-530px.jpg 530w, /img/about/tiles/uvc_0022-465px.jpg 465w, /img/about/tiles/uvc_0022-407px.jpg 407w, /img/about/tiles/uvc_0022-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Intricate, multi-layer, diamond pattern with multiple embedded shapes of black, beige, red, blue." title="Jones, Owen. “Byzantine No. 3.” The Grammar of Ornament, Day and Son, Lithographers to the Queen, 1856, Plate XXX, https://archive.org/details/grammarornament00Jone. Public domain."/></a></div>
 				</section>
+
+				<section aria-labelledby="bibliography">
+					<h2 id="assessments">Call for Assessments</h2>
+					<div><a href="/html/about/call_for_assessments.html"><img loading="lazy" src="/img/about/tiles/uvc_0039-1136px.jpg" srcset="/img/about/tiles/uvc_0039-1136px.jpg 1136w, /img/about/tiles/uvc_0039-930px.jpg 930w, /img/about/tiles/uvc_0039-814px.jpg 814w, /img/about/tiles/uvc_0039-662px.jpg 662w, /img/about/tiles/uvc_0039-568px.jpg 568w, /img/about/tiles/uvc_0039-530px.jpg 530w, /img/about/tiles/uvc_0039-465px.jpg 465w, /img/about/tiles/uvc_0039-407px.jpg 407w, /img/about/tiles/uvc_0039-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="A work made of wool, dovetailed tapestry weave; twined edges; (remnants of) corner knotted tassel." title="Anonymous Navajo (Diné) Artist. Blanket or Rug. [1801-1900], https://www.artic.edu/artworks/153683/blanket-or-rug. Art Institute of Chicago, Chicago, 1999.579. Gift of Joseph W. Fell. CC0 1.0 Universal (CC0 1.0) Public Domain Dedication."/></a></div>
+				</section>
 			</main>
 			
 			<div data-include="footer"></div>
