--- a/html/about/call_for_assessments.html
+++ b/html/about/call_for_assessments.html
@@ -52,13 +52,7 @@
 			<main id="main" aria-labelledby="assessments">
 					<div class="aspect-ratio-box">
 						<h2 id="assessments">Call for Assessments</h2>
-          	<img src="" srcset="" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="" title=""/>
-            <!--
-              /img/about/uvc_0023-900px.jpg
-              /img/about/uvc_0023-900px.jpg 900w, /img/about/uvc_0023-750px.jpg 750w, /img/about/uvc_0023-600px.jpg 600w, /img/about/uvc_0023-450px.jpg 450w, /img/about/uvc_0023-300px.jpg 300w
-              Complex flower array with red, blue, white, pink, purple, and yellow flowers.
-              Jones, Owen. “Indian No. 4.” The Grammar of Ornament, Day and Son, Lithographers to the Queen, 1856, Plate LII, https://archive.org/details/grammarornament00Jone. Public domain.
-            -->
+          	<img src="/img/about/uvc_0039-1800px.jpg" srcset="/img/about/uvc_0039-1800px.jpg 1800w, /img/about/uvc_0039-1650px.jpg 1650w, /img/about/uvc_0039-1500px.jpg 1500w, /img/about/uvc_0039-1350px.jpg 1350w, /img/about/uvc_0039-1200px.jpg 1200w, /img/about/uvc_0039-1050px.jpg 1050w, /img/about/uvc_0039-900px.jpg 900w, /img/about/uvc_0039-750px.jpg 750w, /img/about/uvc_0039-600px.jpg 600w, /img/about/uvc_0039-450px.jpg 450w, /img/about/uvc_0039-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A work made of wool, dovetailed tapestry weave; twined edges; (remnants of) corner knotted tassel." title="Anonymous Navajo (Diné) Artist. Blanket or Rug. [1801-1900], https://www.artic.edu/artworks/153683/blanket-or-rug. Art Institute of Chicago, Chicago, 1999.579. Gift of Joseph W. Fell. CC0 1.0 Universal (CC0 1.0) Public Domain Dedication."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
@@ -87,10 +81,7 @@
           <section aria-labelledby="caption">
             <h3 id="caption">Tile/Header Image Caption</h3>
 
-            <p></p>
-            <!--
-              Owen Jones. “Indian No. 4.” <em><a href="https://archive.org/details/grammarornament00Jone">The Grammar of Ornament</a></em>, Day and Son, Lithographers to the Queen, 1856, Plate LII. Public domain. The founding developers of <em>Undisciplining the Victorian Classroom</em> have selected this image and the others that illustrate the pages of the About section because the images convey two dynamics.  First, the images show the ways that the British in the Victorian period were engaged in the process of collecting and taxonomizing materials from other parts of the world. Second, the images themselves also illustrate how the graphic designs from these non-British and, often, non-Western cultures stand as striking aesthetic achievements in their own right.
-            -->
+            <p>Anonymous Navajo (Diné) Artist. <a href="https://www.artic.edu/artworks/153683/blanket-or-rug">Blanket or Rug</a>. [1801-1900]. Art Institute of Chicago, Chicago, 1999.579. Gift of Joseph W. Fell. CC0 1.0 Universal (CC0 1.0) Public Domain Dedication. The use of this image alludes to the efforts of <em>Undisciplining the Victorian Classroom</em> to engage in unlearning by working across disciplines, cultures, and historical periods, while introducing alternate ways of knowing and representing the world into Victorian Studies.</p>
           </section>
 
           					
