--- a/html/zoomcasts.html
+++ b/html/zoomcasts.html
@@ -58,11 +58,11 @@
 					<p>These Zoomcasts serve as a mechanism for us to stage conversations around specific themes, think together about our classroom practices, and reflect on our processes of learning (and un-learning) as teachers. In conversation with guest speakers, we explore how we can grow together as a community of scholars and learn from one another – especially in moving beyond the boundaries of our field and training. Please also visit our <a href="https://www.youtube.com/channel/UCG54ttra0SBTh3PRvLXuTwA">YouTube</a> channel.</p>
 				</section>
 
-				<!-- <section aria-labelledby="positionality-5">
+				<section aria-labelledby="positionality-5">
 					<h2 id="positionality-5">Positionality #5</h2>
 					<div><a href="/html/zoomcasts/chaozon-bauer.html"><img loading="lazy" src="/img/zoomcasts/chaozon-bauer-930px.jpg" srcset="/img/zoomcasts/chaozon-bauer-930px.jpg 930w, /img/zoomcasts/chaozon-bauer-816px.jpg 816w, /img/zoomcasts/chaozon-bauer-663px.jpg 663w, /img/zoomcasts/chaozon-bauer-532px.jpg 532w, /img/zoomcasts/chaozon-bauer-465px.jpg 465w, /img/zoomcasts/chaozon-bauer-408px.jpg 408w, /img/zoomcasts/chaozon-bauer-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Pearl Chaozon Bauer" title="Pearl Chaozon Bauer"/><span>Pearl Chaozon Bauer</span></a></div>
 					<p>Tricia Lootens interviews Pearl Chaozon Bauer to discuss the latter's recent departure from higher ed. and the need to reenvision Victorian studies classrooms.</p>
-				</section> -->
+				</section>
 
 				<section aria-labelledby="literary-3">
 					<h2 id="literary-3">Beyond the Literary #3</h2>
@@ -94,8 +94,8 @@
 					<p>Michelle Prain Brice, Jennifer Hayward, and Jessie Reeder speak with Ryan D. Fong about how print culture forms a crucial archive for understanding Chile as part of Britain’s “informal empire.”</p>
 				</section>
 
-				<section aria-labelledby="positionality-1">
-					<h2 id="positionality-1">Positionality #1</h2>
+				<section aria-labelledby="positionality-2">
+					<h2 id="positionality-2">Positionality #2</h2>
 					<div><a href="/html/zoomcasts/aslami.html"><img loading="lazy" src="/img/zoomcasts/aslami-930px.jpg" srcset="/img/zoomcasts/aslami-1275px.jpg 1275w, /img/zoomcasts/aslami-930px.jpg 930w, /img/zoomcasts/aslami-816px.jpg 816w, /img/zoomcasts/aslami-663px.jpg 663w, /img/zoomcasts/aslami-532px.jpg 532w, /img/zoomcasts/aslami-465px.jpg 465w, /img/zoomcasts/aslami-408px.jpg 408w, /img/zoomcasts/aslami-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Zarena Aslami" title="Zarena Aslami"/><span>Zarena Aslami</span></a></div>
 					<p>Zarena Aslami speaks with Pearl Chaozon Bauer about the importance of collaborating on research projects and supporting students, colleagues and each other.</p>
 				</section>
@@ -106,11 +106,11 @@
 					<p>Jason Rudy and Ryan D. Fong discuss the importance of visual art in the aesthetic traditions of many Aboriginal communities across Australia.</p>
 				</section>
 
-				<!-- <section aria-labelledby="positionality-0">
-					<h2 id="positionality-0">Positionality #0</h2>
+				<section aria-labelledby="positionality-1">
+					<h2 id="positionality-1">Positionality #1</h2>
 					<div><a href="/html/zoomcasts/lootens.html"><img loading="lazy" src="/img/zoomcasts/lootens-930px.jpg" srcset="/img/zoomcasts/lootens-1275px.jpg 1275w, /img/zoomcasts/lootens-930px.jpg 930w, /img/zoomcasts/lootens-816px.jpg 816w, /img/zoomcasts/lootens-663px.jpg 663w, /img/zoomcasts/lootens-532px.jpg 532w, /img/zoomcasts/lootens-465px.jpg 465w, /img/zoomcasts/lootens-408px.jpg 408w, /img/zoomcasts/lootens-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Tricia Lootens" title="Tricia Lootens"/><span>Tricia Lootens</span></a></div>
 					<p>Tricia Lootens and Pearl Chaozon Bauer discuss the former's academic journey, how students inform changing pedagogies, and the precarity of higher ed.</p>
-				</section> -->
+				</section>
 			</main>
 			
 			<div data-include="footer"></div>
