u vp for new mission

--- a/html/about/values_practices.html
+++ b/html/about/values_practices.html
@@ -36,7 +36,7 @@
 	<!-- Informed throughout by https://w3c.github.io/aria-practices/examples/ -->
 
 	<body class="essay">
-		<div class="text-container content about">
+		<div class="text-container content about values">
 
 			<div data-include="nav"></div>
 
@@ -78,16 +78,20 @@
 					<section aria-labelledby="mission">
 						<h3 id="mission">Our Mission</h3>
 
-						<p><em>Undisciplining the Victorian Classroom</em> is a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens and advocates for engaging scholarship from Black, African, Indigenous and Native American, Asian and Asian American, Latinx, Postcolonial, Decolonial, Feminist, Queer, Transgender, Disability, and Critical Ethnic Studies. The project seeks to:</p>
+						<p><em>Undisciplining the Victorian Classroom</em> is a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens. The project anchors itself on the idea that teaching must be taken seriously as a critical practice, as a site of disciplinary formation and transformation, and as an integral part of antiracist, anti-colonial, and decolonial organizing and activism.</p>
 
-						<ol class="mission">
-							<li>foster the application of innovative, interdisciplinary teaching approaches to Victorian-era literatures and cultural objects of all kinds, and</li>
-							<li>introduce less-studied, global, Victorian-era writers, artists, and communities into the classroom.</li>
-						</ol>
+						<p>Through its practices, the project works in solidarity with the critical interventions made by “<a href="https://lareviewofbooks.org/article/undisciplining-victorian-studies/">Undisciplining Victorian Studies</a>” (Chatterjee, Christoff, Wong 2020) and Christina Sharpe’s call for scholars to “become undisciplined” as a way to undo the racist epistemologies that scholars have inherited, unknowingly or not, from their predecessors (<em>In the Wake: On Blackness and Being</em>, 2016). The project also advocates for engaging scholarship from a wide array of fields, including Black, African, African American, Indigenous, Native American, Asian, Asian American, Latinx, Postcolonial, Decolonial, Feminist, Queer, Transgender, Disability, and Critical Ethnic Studies.</p>
 
-						<p>In taking this approach, the project works in solidarity with the critical intervention made by “<a href="https://lareviewofbooks.org/article/undisciplining-victorian-studies/">Undisciplining Victorian Studies</a>” (Chatterjee, Christoff, Wong 2020) and Christina Sharpe’s call for scholars to “become undisciplined” as a way to undo the racist epistemologies that scholars have inherited, unknowingly or not, from their predecessors (<em>In the Wake: On Blackness and Being</em>, 2016). This commitment not only informs our content but shapes how we relate to one another in our processes of creation and collaboration.</p>
+						<p>Such diverse intellectual commitments not only inform our content, but also, more importantly, shape how we relate to one another in our processes of classroom-based creation and collaboration. Our project, therefore, seeks to:</p>
 
-						<p>By elevating BIPOC (Black, Indigenous, and People of Color), contingent, and other vulnerably-positioned scholars, we seek to build a community based on radical care, which works to remove the structural impediments that prevent scholars, students, and the humanities from receiving the kinds of support and sustenance they so desperately need. Ultimately, the project hopes to inspire new modes of teaching and model alternative forms of scholarly engagement that disrupt white privilege, Anglocentric ways of knowing, and established lines of academic hierarchy in Victorian Studies.</p>
+						<ul>
+							<li>Foster the application of innovative, interdisciplinary teaching approaches to Victorian-era literatures and cultural objects of all kinds;</li>
+							<li>Introduce less-studied, global, Victorian-era writers, artists, and communities into the classroom;</li>
+							<li>Elevate BIPOC (Black, Indigenous, and People of Color), contingent, and other vulnerably-positioned scholars and students, through creating professionalization, mentorship, knowledge transfer, and peer-reviewed publishing opportunities; and</li>
+							<li>Build a community based on radical care, one that seeks to remove or otherwise address the structural impediments that such vulnerable scholars and students routinely confront.</li>
+						</ul>
+
+						<p>Ultimately, the project works to ensure that awareness and informed reflection of race – as a defining facet of the field of Victorian Studies in the present and in the past – stays at the forefront of critical engagement in the classroom. In doing so, the project seeks to inspire new modes of teaching and to model alternative forms of scholarly engagement that disrupt white privilege, Anglocentric ways of knowing, and established lines of academic hierarchy in Victorian Studies.</p>
 					</section>
 
 					<section aria-labelledby="practice">
