u sitemap for assess

--- a/sitemap.html
+++ b/sitemap.html
@@ -129,6 +129,7 @@
 									<li><a href="/html/about/project_contributors.html">Project Contributors</a></li>
 									<li><a href="/html/about/values_practices.html">Values and Practices</a></li>
 									<li><a href="/html/about/bibliography.html">Bibliography</a></li>
+									<li><a href="/html/about/call_for_assessments.html">Call for Assessments</a>
 								</ol>
 							</li>
 						
