u about / sitemap for cfsc

--- a/sitemap.html
+++ b/sitemap.html
@@ -129,7 +129,7 @@
 									<li><a href="/html/about/project_contributors.html">Project Contributors</a></li>
 									<li><a href="/html/about/values_practices.html">Values and Practices</a></li>
 									<li><a href="/html/about/bibliography.html">Bibliography</a></li>
-									<!-- <li><a href="/html/about/call_for_syllabus_clusters_2022.html">Call for Syllabus Clusters (2022)</a></li> -->
+									<li><a href="/html/about/call_for_syllabus_clusters_2022.html">Call for Syllabus Clusters (2022)</a></li>
 									<li><a href="/html/about/call_for_assessments_2022.html">Call for Assessments (2022)</a></li>
 								</ol>
 							</li>
