--- a/sitemap.html
+++ b/sitemap.html
@@ -100,6 +100,14 @@
 	
 							<li role="none"><a href="/html/syllabi.html"><span id="syllabi">Syllabi</span></a>
 								<ol>
+									<li>Deconstructing the Literary Canon
+										<ol>
+											<li><a href="/html/syllabi/canon_fodder.html">Canon Fodder: What Should We Read?</a></li>
+											<li><a href="/html/syllabi/uvc_india_jude.html">UVC in India: Case Study of JUDE</a></li>
+											<li><a href="/syllabi/capital-l_literature.html">Capital L-Literature: Intro to Grad Studies</a></li>
+										</ol>
+									</li>
+
 									<li>Centering Black Studies
 										<ol>
 											<li><a href="/html/syllabi/race_slavery_empire.html">Race, Trans-Atlantic Slavery, and the Empire</a></li>
