--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -69,6 +69,7 @@
 							<li><strong>Ava Bindas</strong> (University of California Davis)</li>
 							<li><strong>Kira Braham</strong> (Louisiana School for Math, Science, and the Arts)</li>
 							<li><strong>Michelle Prain Brice</strong> (Universidad Adolfo Ibañez; Pontificia Universidad Católica de Valparaíso)</li>
+							<li><strong>Lindsey N. Chappell</strong> (Georgia Southern University)</li>
 							<li><strong>Jesse Cordes Selbin</strong> (Gettysburg College)</li>
 							<li><strong>Jenée Crayne</strong> (Notre Dame de Namur University)</li>
 							<li><strong>Meg Dobbins</strong> (Eastern Michigan Universit)</li>
@@ -83,7 +84,9 @@
 							<li><strong>Ji Eun Lee</strong> (Sungkyunkwan University)</li>
 							<li><strong>Margaret Linley</strong> (Simon Fraser University)</li>
 							<li><strong>Tricia Lootens</strong> (University of Georgia)</li>
+							<li><strong>Shantanu Majee</strong> (Techno India University)</li>
 							<li><strong>Indu Ohri</strong> (University of Virginia)</li>
+							<li><strong>Jacob Romanow</strong> (Bryn Mawr College)</li>
 							<li><strong>Jessie Reeder</strong> (Binghamton University)</li>
 							<li><strong>Jason Rudy</strong> (University of Maryland, College Park)</li>
 							<li><strong>Breanna Simpson</strong> (York University)</li>
