u sitemap hide new pages

--- a/sitemap.html
+++ b/sitemap.html
@@ -98,15 +98,15 @@
 								</ol>
 							</li>
 	
-							<li role="none"><a href="/html/syllabi.html"><span id="syllabi">Syllabi</span></a>
+							<!-- <li role="none"><a href="/html/syllabi.html"><span id="syllabi">Syllabi</span></a>
 								<ol>
 									<li>Deconstructing the Literary Canon
 										<ol>
-											<li><a href="/html/syllabi/canon_fodder.html">Canon Fodder: What Should We Read?</a></li>
 											<li><a href="/html/syllabi/uvc_india_jude.html">UVC in India: Case Study of JUDE</a></li>
-											<li><a href="/syllabi/capital-l_literature.html">Capital L-Literature: Intro to Grad Studies</a></li>
+											<li><a href="/html/syllabi/capital-l_literature.html">Capital L-Literature: Intro to Grad Studies</a></li>
+											<li><a href="/html/syllabi/canon_fodder.html">Canon Fodder: What Should We Read?</a></li>
 										</ol>
-									</li>
+									</li> -->
 
 									<li>Centering Black Studies
 										<ol>
