--- a/html/syllabi/uvc_india_jude.html
+++ b/html/syllabi/uvc_india_jude.html
@@ -52,7 +52,7 @@
 			<main id="main" aria-labelledby="syllabus">
 					<div class="aspect-ratio-box">
 						<h2 class="bottom" id="syllabus">UVC in India: Case Study of JUDE</h2>
-          	<img src="/img/syllabi/uvc_0041-1800px.jpg" srcset="/img/syllabi/uvc_0041-1800px.jpg 1800w, /img/syllabi/uvc_0041-1650px.jpg 1650w, /img/syllabi/uvc_0041-1500px.jpg 1500w, /img/syllabi/uvc_0041-1350px.jpg 1350w, /img/syllabi/uvc_0041-1200px.jpg 1200w, /img/syllabi/uvc_0041-1050px.jpg 1050w, /img/syllabi/uvc_0041-900px.jpg 900w, /img/syllabi/uvc_0041-750px.jpg 750w, /img/syllabi/uvc_0041-600px.jpg 600w, /img/syllabi/uvc_0041-450px.jpg 450w, /img/syllabi/uvc_0041-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Exterior of library building with statues of five individuals in foreground." title="Ghosh, Gourav. The Main Library Inside Jadavpur University. 3 Dec. 2011. Wikimedia Commons, https://commons.wikimedia.org/wiki/File:Jadavpur_University_Central_Library.jpg. CC BY-SA 3.0 (https://creativecommons.org/licenses/by-sa/3.0)."/>
+          	<img src="/img/syllabi/uvc_0045-1800px.jpg" srcset="/img/syllabi/uvc_0045-1800px.jpg 1800w, /img/syllabi/uvc_0045-1650px.jpg 1650w, /img/syllabi/uvc_0045-1500px.jpg 1500w, /img/syllabi/uvc_0045-1350px.jpg 1350w, /img/syllabi/uvc_0045-1200px.jpg 1200w, /img/syllabi/uvc_0045-1050px.jpg 1050w, /img/syllabi/uvc_0045-900px.jpg 900w, /img/syllabi/uvc_0045-750px.jpg 750w, /img/syllabi/uvc_0045-600px.jpg 600w, /img/syllabi/uvc_0045-450px.jpg 450w, /img/syllabi/uvc_0045-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Gate of Jadavpur University with name written above and with one of two gate doors open." title="Ghosh, Gourav. The Entry to the Arts Faculty of Jadavpur University. 3 Dec. 2011. Wikimedia Commons, https://commons.wikimedia.org/wiki/File:Jadavpur_University_Gate_No._4.jpg. CC BY-SA 3.0 (https://creativecommons.org/licenses/by-sa/3.0)."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
@@ -138,7 +138,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-						<p>Ghosh, Gourav. <a href="https://commons.wikimedia.org/wiki/File:Jadavpur_University_Central_Library.jpg">The Main Library Inside Jadavpur University</a>. 3 Dec. 2011. Wikimedia Commons. <a href="https://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>.</p>
+						<p>Ghosh, Gourav. <a href="https://commons.wikimedia.org/wiki/File:Jadavpur_University_Gate_No._4.jpg">The Entry to the Arts Faculty of Jadavpur University</a>. 3 Dec. 2011. Wikimedia Commons. <a href="https://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>.</p>
 					</section>
 					
 					<section class="smaller" aria-labelledby="citation">
