--- a/sitemap.html
+++ b/sitemap.html
@@ -98,7 +98,7 @@
 								</ol>
 							</li>
 	
-							<!-- <li role="none"><a href="/html/syllabi.html"><span id="syllabi">Syllabi</span></a>
+							<li role="none"><a href="/html/syllabi.html"><span id="syllabi">Syllabi</span></a>
 								<ol>
 									<li>Deconstructing the Literary Canon
 										<ol>
@@ -106,7 +106,7 @@
 											<li><a href="/html/syllabi/capital-l_literature.html">Capital L-Literature: Intro to Grad Studies</a></li>
 											<li><a href="/html/syllabi/canon_fodder.html">Canon Fodder: What Should We Read?</a></li>
 										</ol>
-									</li> -->
+									</li>
 
 									<li>Centering Black Studies
 										<ol>
