u syllabi for new syllabi

--- a/html/syllabi.html
+++ b/html/syllabi.html
@@ -58,7 +58,7 @@
 					<p>These peer-reviewed syllabi are organized around specific themes that seek to challenge and expand traditional ideas of Victorian Studies. Introducing each syllabus is a short essay that expounds upon the critical framing of the syllabus to make explicit how an undisciplined approach to teaching Victorian Studies informs course design, the selection of materials, assignment construction, and pedagogical practices.</p>
 				</section>
 
-				<!-- <section aria-labelledby="lit-canon-1">
+				<section aria-labelledby="lit-canon-1">
 					<h2 id="lit-canon-1">Deconstructing the Literary Canon #1</h2>
 					<div><a href="/html/syllabi/uvc_india_jude.html"><img loading="lazy" src="/img/syllabi/tiles/uvc_0045-1324px.jpg" srcset="/img/syllabi/tiles/uvc_0045-1324px.jpg 1324w, /img/syllabi/tiles/uvc_0045-1136px.jpg 1136w, /img/syllabi/tiles/uvc_0045-930px.jpg 930w, /img/syllabi/tiles/uvc_0045-814px.jpg 814w, /img/syllabi/tiles/uvc_0045-662px.jpg 662w, /img/syllabi/tiles/uvc_0045-568px.jpg 568w, /img/syllabi/tiles/uvc_0045-530px.jpg 530w, /img/syllabi/tiles/uvc_0045-465px.jpg 465w, /img/syllabi/tiles/uvc_0045-407px.jpg 407w, /img/syllabi/tiles/uvc_0045-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Gate of Jadavpur University with name written above and with one of two gate doors open." title="Ghosh, Gourav. The Entry to the Arts Faculty of Jadavpur University. 3 Dec. 2011. Wikimedia Commons, https://commons.wikimedia.org/wiki/File:Jadavpur_University_Gate_No._4.jpg. CC BY-SA 3.0 (https://creativecommons.org/licenses/by-sa/3.0)."/><span>UVC in India: Case Study of JUDE</span></a></div>
 				</section>
@@ -71,7 +71,7 @@
 				<section aria-labelledby="lit-canon-3">
 					<h2 id="lit-canon-3">Deconstructing the Literary Canon #3</h2>
 					<div><a href="/html/syllabi/canon_fodder.html"><img loading="lazy" src="/img/syllabi/tiles/uvc_0042-1324px.jpg" srcset="/img/syllabi/tiles/uvc_0042-1324px.jpg 1324w, /img/syllabi/tiles/uvc_0042-1136px.jpg 1136w, /img/syllabi/tiles/uvc_0042-930px.jpg 930w, /img/syllabi/tiles/uvc_0042-814px.jpg 814w, /img/syllabi/tiles/uvc_0042-662px.jpg 662w, /img/syllabi/tiles/uvc_0042-568px.jpg 568w, /img/syllabi/tiles/uvc_0042-530px.jpg 530w, /img/syllabi/tiles/uvc_0042-465px.jpg 465w, /img/syllabi/tiles/uvc_0042-407px.jpg 407w, /img/syllabi/tiles/uvc_0042-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Series of tall library bookshelves receding into background." title="jarmoluk. [Untitled Photograph]. 15 Oct. 2014. Pixabay, https://pixabay.com/photos/library-books-bookcases-bookshelves-488690/. Pixabay License (https://pixabay.com/service/license/)."/><span>Canon Fodder: What Should We Read?</span></a></div>
-				</section> -->
+				</section>
 
 				<section aria-labelledby="black-studies-1">
 					<h2 id="black-studies-1">Centering Black Studies #1</h2>
