--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -89,6 +89,7 @@
 							<li><strong>Jacob Romanow</strong> (Bryn Mawr College)</li>
 							<li><strong>Jessie Reeder</strong> (Binghamton University)</li>
 							<li><strong>Jason Rudy</strong> (University of Maryland, College Park)</li>
+							<li><strong>Anne Schwan</strong> (Edinburgh Napier University)</li>
 							<li><strong>Breanna Simpson</strong> (York University)</li>
 							<li><strong>Alisha Walters</strong> (Penn State Abington)</li>
 							<li><strong>Adah Wisnicki</strong> (Prairie Hill Learning Center)</li>
