--- a/html/about/call_for_assistant_editors_2022.html
+++ b/html/about/call_for_assistant_editors_2022.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-    <title>Call for Assistant Editros (2022) | Undisciplining the Victorian Classroom</title>
+    <title>Call for Assistant Editors (2022) | Undisciplining the Victorian Classroom</title>
 		<meta name="description" content="Announces a call for assistant editors (2022) who will create and prepare content for online publication, with a particular focus on our Zoomcast series."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
