u africa lp template

--- a/0_dev/page-templates/0_lesson-plan-template-africa.html
+++ b/0_dev/page-templates/0_lesson-plan-template-africa.html
@@ -2,8 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-    <title> | Undisciplining the Victorian Classroom</title><!-- Change -->
-		<meta name="description" content=""/><!-- Change -->
+		<!-- Add title/remove comment -->
+    <title> (Lesson Plan) | Undisciplining the Victorian Classroom</title>
+    <!-- Add description (160 char max)/remove comment -->
+		<meta name="description" content=""/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#395375"/>
