--- a/html/lesson_plans/east_asia_victorian_realism.html
+++ b/html/lesson_plans/east_asia_victorian_realism.html
@@ -2,10 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-		<!-- Add title/remove comment -->
-    <title> (Lesson Plan) | Undisciplining the Victorian Classroom</title>
-    <!-- Add description (160 char max)/remove comment -->
-		<meta name="description" content=""/>
+    <title>Victorian Realism, China, and the Politics of Form | Undisciplining the Victorian Classroom</title>
+		<meta name="description" content="a.	Explores Chinese perspectives on Victorian novels to destabilize the received understanding of these texts as epistemologically and politically neutral."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#395375"/>
@@ -53,8 +51,8 @@
 
 			<main id="main" aria-labelledby="lesson-plan">
 					<div class="aspect-ratio-box">
-						<h2 id="lesson-plan"></h2><!-- Change -->
-          	<img src="/img/lesson_plans/uvc_000X-1800px.jpg" srcset="/img/lesson_plans/uvc_000X-1800px.jpg 1800w, /img/lesson_plans/uvc_000X-1650px.jpg 1650w, /img/lesson_plans/uvc_000X-1500px.jpg 1500w, /img/lesson_plans/uvc_000X-1350px.jpg 1350w, /img/lesson_plans/uvc_000X-1200px.jpg 1200w, /img/lesson_plans/uvc_000X-1050px.jpg 1050w, /img/lesson_plans/uvc_000X-900px.jpg 900w, /img/lesson_plans/uvc_000X-750px.jpg 750w, /img/lesson_plans/uvc_000X-600px.jpg 600w, /img/lesson_plans/uvc_000X-450px.jpg 450w, /img/lesson_plans/uvc_000X-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="" title=""/>
+						<h2 id="lesson-plan">Victorian Realism, China, and the Politics of Form</h2>
+          	<img src="/img/lesson_plans/uvc_0047-1800px.jpg" srcset="/img/lesson_plans/uvc_0047-1800px.jpg 1800w, /img/lesson_plans/uvc_0047-1650px.jpg 1650w, /img/lesson_plans/uvc_0047-1500px.jpg 1500w, /img/lesson_plans/uvc_0047-1350px.jpg 1350w, /img/lesson_plans/uvc_0047-1200px.jpg 1200w, /img/lesson_plans/uvc_0047-1050px.jpg 1050w, /img/lesson_plans/uvc_0047-900px.jpg 900w, /img/lesson_plans/uvc_0047-750px.jpg 750w, /img/lesson_plans/uvc_0047-600px.jpg 600w, /img/lesson_plans/uvc_0047-450px.jpg 450w, /img/lesson_plans/uvc_0047-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="" title=""/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
@@ -62,9 +60,9 @@
 						<h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
 						<div class="specs-container">
-							<p><strong>Developer:</strong>  <a class="mail" href="mailto:?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p><!-- Change -->
+							<p><strong>Developer:</strong> Rae X. Yan <a class="mail" href="mailto:raeyan@ufl.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
 
-							<p><strong>Collaborating Peer Reviewers:</strong> Menglu Gao, Waiyee Loh, Hyungji Park, Jessica R. Valdez, Rae X. Yan</p><!-- Change -->
+							<p><strong>Collaborating Peer Reviewers:</strong> Menglu Gao, Waiyee Loh, Hyungji Park, Jessica R. Valdez</p>
 							
 							<p><strong>Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
 
@@ -82,10 +80,10 @@
               <li><a href="#structure">Structure and Organization</a></li>
               <li><a href="#materials">Suggested Materials</a>
                 <ol>
-                  <li><a href="#materials-1"></a></li><!-- Change -->
-                  <li><a href="#materials-2"></a></li><!-- Change -->
-                  <li><a href="#materials-3"></a></li><!-- Change -->
-                  <li><a href="#materials-4"></a></li><!-- Change -->
+                  <li><a href="#materials-1">The Politics of Literary Genre</a></li>
+                  <li><a href="#materials-2">Chinese “Victorian” Narratives</a></li>
+                  <li><a href="#materials-3">(Novel) Oddities</a></li>
+                  <li><a href="#materials-4">Outside Victorian Encounters</a></li>
                 </ol>
               </li>
 							<li><a href="#biography">Developer Biography</a></li>
@@ -108,22 +106,22 @@
 						<h3 id="materials">Suggested Materials</h3>
 
             <section aria-labelledby="materials-1">
-              <h4 id="materials-1"></h4><!-- Change -->
+              <h4 id="materials-1">The Politics of Literary Genre</h4>
 
             </section>
 
             <section aria-labelledby="materials-2">
-              <h4 id="materials-2"></h4><!-- Change -->
+              <h4 id="materials-2">Chinese “Victorian” Narratives</h4>
 
             </section>
 
             <section aria-labelledby="materials-3">
-              <h4 id="materials-3"></h4><!-- Change -->
+              <h4 id="materials-3">(Novel) Oddities</h4>
 
             </section>
 
             <section aria-labelledby="materials-4">
-              <h4 id="materials-4"></h4><!-- Change -->
+              <h4 id="materials-4">Outside Victorian Encounters</h4>
 
             </section>
 					</section>
@@ -131,6 +129,7 @@
 					<section aria-labelledby="biography">
 						<h3 id="biography">Developer Biography</h3>
 
+						<p>Rae X. Yan is an Assistant Professor of British Literature from 1830 to 1900 at the University of Florida. She is currently at work on a book project about anatomizing as a joint literary and scientific practice during the Victorian era. Her research on this work has been published in <em>Nineteenth-Century Contexts</em>, <em>Nineteenth-Century Gender Studies</em>, <em>English Literature in Transition 1880-1920</em>, and <em>Dickens Studies Annual</em>.</p>
 					</section>
 
 					<section aria-labelledby="caption">
@@ -140,7 +139,7 @@
 
 					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-						<p>, lesson plan dev. “.” Menglu Gao, Waiyee Loh, Hyungji Park, Jessica R. Valdez, Rae X. Yan, collab. peer revs.; Sophia Hsu, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/lesson_plans/.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/.html</a>.</p><!-- Change -->
+						<p>Rae X. Yan, lesson plan dev. “Victorian Realism, China, and the Politics of Form.” Menglu Gao, Waiyee Loh, Hyungji Park, Jessica R. Valdez, collab. peer revs.; Sophia Hsu, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/lesson_plans/east_asia_victorian_realism.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/east_asia_victorian_realism.html</a>.</p>
 					</section>
 			</main>
 			
