--- a/html/lesson_plans/east_asia_victorian_realism.html
+++ b/html/lesson_plans/east_asia_victorian_realism.html
@@ -52,7 +52,7 @@
 			<main id="main" aria-labelledby="lesson-plan">
 					<div class="aspect-ratio-box">
 						<h2 id="lesson-plan">Victorian Realism, China, and the Politics of Form</h2>
-          	<img src="/img/lesson_plans/uvc_0047-1800px.jpg" srcset="/img/lesson_plans/uvc_0047-1800px.jpg 1800w, /img/lesson_plans/uvc_0047-1650px.jpg 1650w, /img/lesson_plans/uvc_0047-1500px.jpg 1500w, /img/lesson_plans/uvc_0047-1350px.jpg 1350w, /img/lesson_plans/uvc_0047-1200px.jpg 1200w, /img/lesson_plans/uvc_0047-1050px.jpg 1050w, /img/lesson_plans/uvc_0047-900px.jpg 900w, /img/lesson_plans/uvc_0047-750px.jpg 750w, /img/lesson_plans/uvc_0047-600px.jpg 600w, /img/lesson_plans/uvc_0047-450px.jpg 450w, /img/lesson_plans/uvc_0047-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="" title=""/>
+          	<img src="/img/lesson_plans/uvc_0047-1800px.jpg" srcset="/img/lesson_plans/uvc_0047-1800px.jpg 1800w, /img/lesson_plans/uvc_0047-1650px.jpg 1650w, /img/lesson_plans/uvc_0047-1500px.jpg 1500w, /img/lesson_plans/uvc_0047-1350px.jpg 1350w, /img/lesson_plans/uvc_0047-1200px.jpg 1200w, /img/lesson_plans/uvc_0047-1050px.jpg 1050w, /img/lesson_plans/uvc_0047-900px.jpg 900w, /img/lesson_plans/uvc_0047-750px.jpg 750w, /img/lesson_plans/uvc_0047-600px.jpg 600w, /img/lesson_plans/uvc_0047-450px.jpg 450w, /img/lesson_plans/uvc_0047-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="" title="Fong, Lai. ”Part of the Bund, Shanghai.“ 1870s, http://hdl.handle.net/10020/2003r22b7. The Getty Research Institute, Clark Worswick collection of photographs of China and Southeast Asia, 2003.R.22-b7.36r. Public domain. See The Getty Research Institutute's “Reproductions and Permissions” (https://www.getty.edu/research/library/using/reproductions_permissions/index.html)."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
@@ -133,7 +133,7 @@
 								<h5 id="primary-1">Primary Texts</h5>
 								
 								<p>Duxiu, Chen. “On Literary Revolution.” 1917. <em>Modern Chinese Literary Thought: Writings on Literature, 1893-1945</em>, edited by Kirk A. Denton, Stanford University Press, 1996, pp. 140–45.<br/>
-									<span class="annotation">This manifesto originally appeared in New Youth / La Jeunesse (Êñ∞ÈùíÂπ¥), a literary magazine published from 1915 to 1926 by the co-founder of the Communist party, Chen Duxiu. It is one of Chen Duxiu‘s most well-known short essays that influenced the New Culture / May Fourth Movement and pairs well with Shu-Mei Shih's chapter on Occidentalism. Chen Duxiu‘s work situates Europe's literary tradition as foundational for revolutionary politics – referencing English thinkers and writers including Francis Bacon, Charles Darwin, Dickens, and Oscar Wilde – and makes several arguments for abandoning Chinese traditional literature for a “reform of literature.”</span>
+									<span class="annotation">This manifesto originally appeared in <em>New Youth </em>/ <em>La Jeunesse</em> (新青年), a literary magazine published from 1915 to 1926 by the co-founder of the Communist party, Chen Duxiu. It is one of Chen Duxiu’s most well-known short essays that influenced the New Culture / May Fourth Movement and pairs well with Shu-Mei Shih’s chapter on Occidentalism. Chen Duxiu’s work situates Europe’s literary tradition as foundational for revolutionary politics – referencing English thinkers and writers including Francis Bacon, Charles Darwin, Dickens, and Oscar Wilde – and makes several arguments for abandoning Chinese traditional literature for a “reform of literature.”</span>
 								</p>
 
 								<p>Qichao, Liang. “On the Relationship Between Fiction and the Government of the People.” 1902. <em>Modern Chinese Literary Thought: Writings on Literature, 1893-1945</em>, edited by Kirk A. Denton, Stanford University Press, 1996, pp. 74–81.<br/>
@@ -284,7 +284,7 @@
 									<span class="annotation">Freedgood’s historical account of the literary critical directions that have led to the way we read and think about realism now is invaluable for thinking about the very odd generic and formal structures of the three stories on madmen by Dickens, Gogol, and Lu Xun.</span>
 								</p>
 
-								<p>Tang, Xiaobing. “<a href="https://doi.org/10.2307/462876">https://doi.org/10.2307/462876Lu Xun’s ‘Diary of a Madman’ and a Chinese Modernism</a>.” <em>PMLA</em>, vol. 107, no. 5, Oct. 1992, pp. 1222–34. <em>Cambridge University Press</em><br/>
+								<p>Tang, Xiaobing. “<a href="https://doi.org/10.2307/462876">Lu Xun’s ‘Diary of a Madman’ and a Chinese Modernism</a>.” <em>PMLA</em>, vol. 107, no. 5, Oct. 1992, pp. 1222–34. <em>Cambridge University Press</em><br/>
 									<span class="annotation">One of the best critical readings of Lu Xun’s “A Madman’s Diary” in English, Tang’s article questions how readers may approach thinking of Lu Xun’s work in terms of a “modernist” text and thus possibly subscribing the work to a Western cultural hegemony. Tang’s close readings attend to the linguistic play of Lu Xun’s story and opens up a consideration of the kind of translingual practices that do and can shape the production of realist fiction.</span>
 								</p>
 							</section>
@@ -364,6 +364,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
+						<p>Fong, Lai. ”<a href="http://hdl.handle.net/10020/2003r22b7">Part of the Bund, Shanghai</a>.“ 1870s. The Getty Research Institute, Clark Worswick collection of photographs of China and Southeast Asia, 2003.R.22-b7.36r. Public domain. See The Getty Research Institutute's “<a href="https://www.getty.edu/research/library/using/reproductions_permissions/index.html">Reproductions and Permissions</a>.”</p>
 					</section>
 
 					<section class="smaller" aria-labelledby="citation">
