--- a/html/lesson_plans/east_asia_psychoactive_revolution.html
+++ b/html/lesson_plans/east_asia_psychoactive_revolution.html
@@ -51,7 +51,7 @@
 
 			<main id="main" aria-labelledby="lesson-plan">
 					<div class="aspect-ratio-box">
-						<h2 id="lesson-plan">Psychoactive Revolution and Transnational Networks | Undisciplining the Victorian Classroom</h2>
+						<h2 id="lesson-plan">Psychoactive Revolution and Transnational Networks</h2>
           	<img src="/img/lesson_plans/uvc_0046-1200px.jpg" srcset="/img/lesson_plans/uvc_0046-1200px.jpg 1200w, /img/lesson_plans/uvc_0046-1050px.jpg 1050w, /img/lesson_plans/uvc_0046-900px.jpg 900w, /img/lesson_plans/uvc_0046-750px.jpg 750w, /img/lesson_plans/uvc_0046-600px.jpg 600w, /img/lesson_plans/uvc_0046-450px.jpg 450w, /img/lesson_plans/uvc_0046-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Commissioner Lin and a set of officials overseeing men destroying opium while other men observe." title="Anonymous. ”Commissioner Lin and the Destruction of the Opium in 1839.” c.1840, https://commons.wikimedia.org/wiki/File:Destruction_of_opium_in_1839.jpg. Wikimedia Commons. Public domain."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
