u links to syll clusters call

--- a/sitemap.html
+++ b/sitemap.html
@@ -139,7 +139,7 @@
 									<li><a href="/html/about/bibliography.html">Bibliography</a></li>
 									<li><a href="/html/about/call_for_assistant_editors_2022.html">Call for Assistant Editors (2022)</a></li>
 									<li><a href="/html/about/call_for_assessments_2022.html">Call for Assessments (2022)</a></li>
-									<li><a href="/html/about/call_for_syllabus_clusters_2022.html">Call for Syllabus Clusters (2022)</a></li>
+									<li><a href="/html/about/call_for_syllabi_and_syllabus_clusters.html">Call for Syllabi and Syllabus Clusters</a></li>
 								</ol>
 							</li>
 						
