--- a/html/about/call_for_syllabi_and_syllabus_clusters.html
+++ b/html/about/call_for_syllabi_and_syllabus_clusters.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-    <title>Call for Syllabi and Syllabus Clusters | Undisciplining the Victorian Classroom</title>
+    <title>Call for Syllabi and Syllabus Clusters (Open) | Undisciplining the Victorian Classroom</title>
 		<meta name="description" content="Announces an open call for syllabi and syllabus clusters that will model inclusive, antiracist, antiableist, and anticolonial assessment practices."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -51,7 +51,7 @@
 
 			<main id="main" aria-labelledby="assessments">
 					<div class="aspect-ratio-box">
-						<h2 id="assessments">Call for Syllabi and Syllabus Clusters</h2>
+						<h2 id="assessments">Call for Syllabi and Syllabus Clusters (Open)</h2>
           	<img src="/img/about/uvc_0040-1800px.jpg" srcset="/img/about/uvc_0040-1800px.jpg 1800w, /img/about/uvc_0040-1650px.jpg 1650w, /img/about/uvc_0040-1500px.jpg 1500w, /img/about/uvc_0040-1350px.jpg 1350w, /img/about/uvc_0040-1200px.jpg 1200w, /img/about/uvc_0040-1050px.jpg 1050w, /img/about/uvc_0040-900px.jpg 900w, /img/about/uvc_0040-750px.jpg 750w, /img/about/uvc_0040-600px.jpg 600w, /img/about/uvc_0040-450px.jpg 450w, /img/about/uvc_0040-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A work made of wool, single interlocking tapestry weave; two selvages present." title="Anonymous Navajo (Diné) Artist. Moqui-Style Sarape. [c.1870], https://www.artic.edu/artworks/148331/moqui-style-sarape. Art Institute of Chicago, Chicago, 1997.458. Through prior acquisitions of Louis A. Allen, Mr. and Mrs. James W. Alsdorf, The Alsdorf Foundation, Joseph P. Antonow, Edward E. Ayer in memory of Charles L. Hutchinson, Herbert Baker, Mr. and Mrs. Dave Chapman, Sylvia Coppersmith in memory of Leila Rosen, Mrs. Eugene A. Davidson, Domenic DiPiero, Maurice D. Galleher Endowment, Mr. and Mrs. Edwin E. Hokin, Mrs. Maurice H. Mandelbaum as a gift of her family, Mr. and Mrs. Everett McNear; Mr. and Mrs. Michael Newbury, Dr. H. Van de Waal, Mr. and Mrs. Raymond Wielgus and Suzette Morton Zurcher. CC0 1.0 Universal (CC0 1.0) Public Domain Dedication."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
@@ -89,7 +89,7 @@
           					
 					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page Citation (MLA)</h3>
-						<p>“Call for Syllabi and Syllabus Clusters.” <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/about/call_for_syllabi_and_syllabus_clusters.html" class="cite-link">https://undiscipliningvc.org/html/about/call_for_syllabi_and_syllabus_clusters.html</a>.</p>
+						<p>“Call for Syllabi and Syllabus Clusters (Open).” <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/about/call_for_syllabi_and_syllabus_clusters.html" class="cite-link">https://undiscipliningvc.org/html/about/call_for_syllabi_and_syllabus_clusters.html</a>.</p>
 					</section>
 			</main>
 			
