u assmt + asst eds for syl+syl clust

--- a/html/about/call_for_assessments_2022.html
+++ b/html/about/call_for_assessments_2022.html
@@ -83,7 +83,7 @@
           <section aria-labelledby="caption">
             <h3 id="caption">Tile/Header Image Caption</h3>
 
-            <p>Anonymous Navajo (Diné) Artist. <a href="https://www.artic.edu/artworks/153683/blanket-or-rug">Blanket or Rug</a>. [1801-1900]. Art Institute of Chicago, Chicago, 1999.579. Gift of Joseph W. Fell. CC0 1.0 Universal (CC0 1.0) Public Domain Dedication. The use of this image here and other such images on our recent <a href="/html/about/call_for_syllabi_and_syllabus_clusters.html">Call for Syllabi and Syllabus Clusters</a> and <a href="/html/about/call_for_assistant_editors_2022.html">Call for Assistant Editor</a> (2022) pages allude to the efforts of <em>Undisciplining the Victorian Classroom</em> to engage in unlearning by working across disciplines, cultures, and historical periods, while introducing alternate ways of knowing and representing the world into Victorian Studies.</p>
+            <p>Anonymous Navajo (Diné) Artist. <a href="https://www.artic.edu/artworks/153683/blanket-or-rug">Blanket or Rug</a>. [1801-1900]. Art Institute of Chicago, Chicago, 1999.579. Gift of Joseph W. Fell. CC0 1.0 Universal (CC0 1.0) Public Domain Dedication. The use of this image here and other such images on our recent <a href="/html/about/call_for_syllabi_and_syllabus_clusters.html">Call for Syllabi and Syllabus Clusters (Open)</a> and <a href="/html/about/call_for_assistant_editors_2022.html">Call for Assistant Editor (2022)</a> pages allude to the efforts of <em>Undisciplining the Victorian Classroom</em> to engage in unlearning by working across disciplines, cultures, and historical periods, while introducing alternate ways of knowing and representing the world into Victorian Studies.</p>
           </section>
 
           					
